Refactor: Platform Role Permission and Other Changes (#138)